--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.5.0",
     "firebase": "^10.3.1",
+    "firebase-admin": "^11.11.0",
+    "micro": "^10.0.1",
     "movie-trailer": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
