--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.5.0",
     "firebase": "^10.3.1",
     "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.4.1",
     "micro": "^10.0.1",
     "movie-trailer": "^3.1.0",
     "react": "^18.2.0",
